tests/run-make/const-destruct-stable-toolchain/const-drop-nightly.stderr
error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> const-drop.rs:1:24
   |
LL | const fn const_drop<T>(_: T) {}
   |                        ^      - value is dropped here
   |                        |
   |                        the destructor for this type cannot be evaluated in constant functions
   |
help: consider restricting type parameter `T` with unstable trait `Destruct`
   |
LL | const fn const_drop<T: [const] Destruct>(_: T) {}
   |                      ++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
